Issue #139: Remove deprecated smb.conf syslog setting.
(cherry picked from commit 46a8daae8fe7a22023575332d6c2a2e75f10081c)
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault (4.1.14-1) stable; urgency=low
 
+  * Issue #139: Remove deprecated smb.conf syslog setting.
   * Issue #206: Fix cron job to update SMART database.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 12 Nov 2018 13:31:00 +0100
