--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -2,6 +2,7 @@ openmediavault (4.1.14-1) stable; urgency=low
 
   * Issue #139: Remove deprecated smb.conf syslog setting.
   * Issue #206: Fix cron job to update SMART database.
+  * Issue #208: Fix bug in power button configuration.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 12 Nov 2018 13:31:00 +0100
 
