--- a/deb/openmediavault/usr/share/openmediavault/locale/sv_SV/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/sv_SV/openmediavault.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-10-05 22:03+0200\n"
-"PO-Revision-Date: 2018-10-05 20:04+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2018-11-09 10:40+0000\n"
+"Last-Translator: Jonatan Nyberg\n"
 "Language-Team: Swedish (http://www.transifex.com/votdev/openmediavault/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -696,10 +696,10 @@ msgid "Cook Islands"
 msgstr "Cooköarna"
 
 msgid "Copy"
-msgstr ""
+msgstr "Kopiera"
 
 msgid "Copy public SSH key"
-msgstr ""
+msgstr "Kopiera offentlig SSH-nyckel"
 
 msgid "Copy to clipboard"
 msgstr "Kopiera till urklipp"
@@ -1445,7 +1445,7 @@ msgid "Guyana"
 msgstr "Guyana"
 
 msgid "HTTP 404 error"
-msgstr ""
+msgstr "HTTP 404-fel"
 
 msgid "HTTP-Proxy"
 msgstr "HTTP-proxy"
@@ -1664,7 +1664,7 @@ msgstr "Installerar uppdateringar ..."
 msgid ""
 "Installs the public SSH key on a remote system as an authorized key. Make "
 "sure password authentication is enabled on that remote system."
-msgstr ""
+msgstr "Installerar den offentliga SSH-nyckeln på ett fjärrsystem som en auktoriserad nyckel. Se till att lösenordsautentisering är aktiverad på det fjärrsystemet."
 
 msgid "Interfaces"
 msgstr "Gränssnitt"
@@ -2521,7 +2521,7 @@ msgid "Proxy"
 msgstr "Proxy"
 
 msgid "Public"
-msgstr "Publik"
+msgstr "Offentlig"
 
 msgid "Public key"
 msgstr "Offentlig nyckel"
@@ -3324,7 +3324,7 @@ msgid "The hostname is a label that identifies the system to the network."
 msgstr "Värdnamnet är en etikett som identifierar systemet till nätverket."
 
 msgid "The hostname of the remote system."
-msgstr ""
+msgstr "Fjärrsystemets värdnamn."
 
 msgid ""
 "The information about available software is out-of-date. You need to reload "
@@ -3372,7 +3372,7 @@ msgid ""
 msgstr "Behörigheter för nya filer och kataloger styrs normalt av att skapa-mask och katalog-mask men ärva behörigheter-parametern åsidosätter detta. Detta kan vara särskilt användbart på system med många användare att tillåta att en enda utdelning används flexibelt av varje användare."
 
 msgid "The port on which SSH is running on the remote system."
-msgstr ""
+msgstr "Porten på vilken SSH körs på fjärrsystemet."
 
 msgid "The private RSA key in X.509 PEM format."
 msgstr "Den privata RSA-nyckeln i X.509 PEM-format."
@@ -3386,7 +3386,7 @@ msgid ""
 msgstr "Centralkatalogen kommer att kontrolleras för nya, borttagna eller uppgraderade mjukvarupaket."
 
 msgid "The requested page was not found."
-msgstr ""
+msgstr "Den begärda sidan hittades inte."
 
 msgid ""
 "The requirement that the SSL session from the control connection is reused "
