--- a/deb/openmediavault/usr/share/openmediavault/locale/zh_CN/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/zh_CN/openmediavault.po
@@ -3,6 +3,7 @@
 # This file is distributed under the same license as the openmediavault package.
 # 
 # Translators:
+# Herald Yu <yuhr123@gmail.com>, 2018
 # songming <by@songming.me>, 2013-2018
 # Wei Ding <dyw.net@gmail.com>, 2014-2015
 msgid ""
@@ -10,8 +11,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-10-05 22:03+0200\n"
-"PO-Revision-Date: 2018-10-05 20:04+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2018-11-16 02:42+0000\n"
+"Last-Translator: Herald Yu <yuhr123@gmail.com>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/votdev/openmediavault/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -64,7 +65,7 @@ msgstr "10 年"
 
 #, javascript-format
 msgid "100% completed ..."
-msgstr "100%完成 ..."
+msgstr "100% 完成 ..."
 
 msgid "120 minutes"
 msgstr "120 分钟"
@@ -73,7 +74,7 @@ msgid "127 - Intermediate power usage with standby"
 msgstr "127 - 待机状态时中等功耗"
 
 msgid "128 - Minimum power usage without standby (no spindown)"
-msgstr "128 - 非待机状态时最低功耗(磁头运转中)"
+msgstr "128 - 非待机状态时最低功耗(磁头不停转)"
 
 msgid "15 minutes"
 msgstr "15 分钟"
@@ -220,7 +221,7 @@ msgid "Add bond connection"
 msgstr "添加链路汇聚"
 
 msgid "Add devices to RAID device"
-msgstr "添加设备到 RAID 阵列中"
+msgstr "添加设备到 RAID 阵列"
 
 msgid "Add ethernet connection"
 msgstr "添加网络连接"
@@ -232,7 +233,7 @@ msgid "Add group"
 msgstr "添加用户组"
 
 msgid "Add hot spares / recover RAID device"
-msgstr "添加热备/恢复 RAID 阵列"
+msgstr "添加热备/恢复 RAID 设备"
 
 msgid "Add module"
 msgstr "添加模块"
@@ -312,7 +313,7 @@ msgstr "全部"
 
 msgid ""
 "Allow clients to attempt to store OS/2 style extended attributes on a share."
-msgstr "允许客户端通过共享存储 OS/2 类型扩展特性。"
+msgstr "允许客户端尝试在共享上存储 OS / 2 风格的扩展属性。"
 
 msgid "Allow clients to resume interrupted uploads and downloads"
 msgstr "允许客户端恢复中断的上传和下载"
@@ -330,12 +331,12 @@ msgstr "美属萨摩亚"
 msgid ""
 "An email message with the command output (if any produced) is send to the "
 "administrator."
-msgstr "一封包含命令输出 (如果发生) 的邮件将发送给管理员。"
+msgstr "一封包含命令输出 (如果有) 的邮件将发送给管理员。"
 
 msgid ""
 "An email message with the command output (if any produced) is send to the "
 "user who performs the job."
-msgstr "一封包含命令输出 (如果发生) 的邮件将发送给执行该任务的用户。"
+msgstr "一封包含命令输出 (如果有) 的邮件将发送给执行该任务的用户。"
 
 msgid "An error has occured"
 msgstr "发生一个错误"
@@ -437,7 +438,7 @@ msgid "Auto logout"
 msgstr "自动登出"
 
 msgid "Auto logout after the specified idle period."
-msgstr "指定空闲多久后自动登出."
+msgstr "指定空闲多久后自动登出。"
 
 msgid "Automatic Acoustic Management"
 msgstr "自动声音管理"
@@ -623,7 +624,7 @@ msgid "Client address"
 msgstr "客户端地址"
 
 msgid "Clients allowed to mount the file system, e.g. 192.168.178.0/24."
-msgstr "客户端可以挂载文件系统，如 192.168.178.0/24。"
+msgstr "允许挂载文件系统的客户端，如 192.168.178.0/24。"
 
 msgid "Close"
 msgstr "关闭"
@@ -644,7 +645,7 @@ msgid "Common Name"
 msgstr "通用名"
 
 msgid "Community-maintained updates."
-msgstr "社区维护更新。"
+msgstr "社区维护的更新。"
 
 msgid "Comoros"
 msgstr "科摩罗"
@@ -659,7 +660,7 @@ msgid "Compress"
 msgstr "压缩"
 
 msgid "Compress file data during the transfer"
-msgstr "在传输过程中压缩文件数据"
+msgstr "在传输时压缩文件数据"
 
 msgid "Compressed"
 msgstr "压缩的"
@@ -695,10 +696,10 @@ msgid "Cook Islands"
 msgstr "库克群岛"
 
 msgid "Copy"
-msgstr ""
+msgstr "复制"
 
 msgid "Copy public SSH key"
-msgstr ""
+msgstr "复制 SSH 公钥"
 
 msgid "Copy to clipboard"
 msgstr "复制到剪贴板"
@@ -719,10 +720,10 @@ msgid "Create file system"
 msgstr "创建文件系统"
 
 msgid "Create self-signed SSL certificate"
-msgstr "创建自签名证书"
+msgstr "创建自签名 SSL 证书"
 
 msgid "Creating the file system, please wait ..."
-msgstr "创建文件系统，请等待..."
+msgstr "正在创建文件系统，请稍等.."
 
 msgid "Critical"
 msgstr "严重"
@@ -788,7 +789,7 @@ msgid "Delete file system"
 msgstr "删除文件系统"
 
 msgid "Delete files on the receiving side that don't exist on sender"
-msgstr "若发送端不存而接收端存在的文件则删除"
+msgstr "在接收端删除发送端不存在的文件"
 
 msgid "Deleting selected item(s)"
 msgstr "删除选择项目(可复选)"
@@ -797,7 +798,7 @@ msgid "Denmark"
 msgstr "丹麦"
 
 msgid "Deny logins which do not have a valid shell"
-msgstr "拒绝无效shell登录"
+msgstr "拒绝无效的 shell 登录"
 
 msgid "Description"
 msgstr "描述"
@@ -809,7 +810,7 @@ msgid ""
 "Destination address can be either a network IP address (with /mask), a IP "
 "range or a plain IP address. A '!' argument before the address specification"
 " inverts the sense of the address."
-msgstr "目标地址可以是网络 IP 地址(包含/子网掩码)，IP 范围或者单个 IP 地址，地址前可以用 “!” 来反转地址的意义。"
+msgstr "目标地址可以是网络 IP 地址(包含 /子网掩码)、IP 段或单个 IP 地址。地址前可以用 “!” 来反转地址的意义。"
 
 msgid "Destination port"
 msgstr "目标端口"
@@ -851,7 +852,7 @@ msgid "Device properties"
 msgstr "设备属性"
 
 msgid "Device was used outside of design parameters in the past"
-msgstr "设备使用曾超出设计参数"
+msgstr "设备曾超出设计参数使用"
 
 msgid "Device(s)"
 msgstr "设备(可复选)"
@@ -875,13 +876,13 @@ msgid "Directory"
 msgstr "目录"
 
 msgid "Disabled"
-msgstr "关闭"
+msgstr "禁用"
 
 msgid "Disallow the user to modify his account."
 msgstr "不允许用户修改自己的账户。"
 
 msgid "Disk usage"
-msgstr "磁盘使用"
+msgstr "磁盘用量"
 
 msgid "Disks"
 msgstr "磁盘"
@@ -916,19 +917,19 @@ msgid ""
 msgstr "确定要格式化该设备？该设备所有数据将被删除，注意创建文件系统可能需要较长时间。"
 
 msgid "Do you really want to install the selected plugin(s)?"
-msgstr "确认要安装选中插件吗？"
+msgstr "是否要安装选中的插件(可复选)？"
 
 msgid "Do you really want to leave the page?"
-msgstr "确定离开此网页？"
+msgstr "是否要离开此页面？"
 
 msgid "Do you really want to logout?"
-msgstr "确定注销？"
+msgstr "是否要退出登录？"
 
 msgid "Do you really want to put the system into standby?"
 msgstr "确定要让系统进入待机状态？"
 
 msgid "Do you really want to reboot the system?"
-msgstr "确定重启系统？"
+msgstr "是否要重启系统？"
 
 msgid ""
 "Do you really want to relocate the shared folder? The content of the shared "
@@ -1019,10 +1020,10 @@ msgid "Edit SSL certificate"
 msgstr "编辑 SSL 证书"
 
 msgid "Edit VLAN connection"
-msgstr "编辑 VLAN 链接"
+msgstr "编辑 VLAN 连接"
 
 msgid "Edit Wi-Fi connection"
-msgstr "编辑 Wi-Fi 链接"
+msgstr "编辑 Wi-Fi 连接"
 
 msgid "Edit bond connection"
 msgstr "编辑链路汇聚"
@@ -1091,7 +1092,7 @@ msgid "Enable SSL/TLS"
 msgstr "启用 SSL/TLS"
 
 msgid "Enable SSL/TLS connections"
-msgstr "启用 SSL/TLS 链接"
+msgstr "启用 SSL/TLS 连接"
 
 msgid "Enable WINS server"
 msgstr "启用 WINS 服务器"
@@ -1103,7 +1104,7 @@ msgid "Enable archive mode"
 msgstr "启用归档模式"
 
 msgid "Enable asynchronous I/O (AIO) support."
-msgstr "启用异步 I/O(AIO) 支持"
+msgstr "启用异步 I/O (AIO) 支持。"
 
 msgid "Enable chroot."
 msgstr "开启 chroot。"
@@ -1219,7 +1220,7 @@ msgid "Execute command"
 msgstr "执行命令"
 
 msgid "Execute cron job"
-msgstr "执行 cron 任务"
+msgstr "执行计划任务"
 
 msgid "Execute only"
 msgstr "仅执行"
@@ -1444,7 +1445,7 @@ msgid "Guyana"
 msgstr "圭亚那"
 
 msgid "HTTP 404 error"
-msgstr ""
+msgstr "HTTP 404 错误"
 
 msgid "HTTP-Proxy"
 msgstr "HTTP - 代理"
@@ -1663,7 +1664,7 @@ msgstr "安装更新中 ..."
 msgid ""
 "Installs the public SSH key on a remote system as an authorized key. Make "
 "sure password authentication is enabled on that remote system."
-msgstr ""
+msgstr "将 SSH 公钥作为授权秘钥添加到远程系统。请确保远程系统启用了密码认证。"
 
 msgid "Interfaces"
 msgstr "接口"
@@ -3323,7 +3324,7 @@ msgid "The hostname is a label that identifies the system to the network."
 msgstr "主机名可以作为网络上识别系统的标签。"
 
 msgid "The hostname of the remote system."
-msgstr ""
+msgstr "远程系统主机名"
 
 msgid ""
 "The information about available software is out-of-date. You need to reload "
@@ -3371,7 +3372,7 @@ msgid ""
 msgstr "新文件和目录的权限一般是由创建掩码和目录掩码决定，但权限继承会复写它们。当系统有许多用户使用单一共享时这种方案会很灵活。"
 
 msgid "The port on which SSH is running on the remote system."
-msgstr ""
+msgstr "远程系统的 SSH 端口号。"
 
 msgid "The private RSA key in X.509 PEM format."
 msgstr "X.509 PEM 格式的 RSA 私钥。"
@@ -3385,7 +3386,7 @@ msgid ""
 msgstr "软件源将检查是否有删除或更新的软件包信息。"
 
 msgid "The requested page was not found."
-msgstr ""
+msgstr "未找到请求的页面。"
 
 msgid ""
 "The requirement that the SSL session from the control connection is reused "
