--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -14,7 +14,10 @@ openmediavault (5.0-1) unstable; urgency=low
 
 openmediavault (4.1.14-1) stable; urgency=low
 
+  * Update locales.
+  * Issue #139: Remove deprecated smb.conf syslog setting.
   * Issue #206: Fix cron job to update SMART database.
+  * Issue #208: Fix bug in power button configuration.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 12 Nov 2018 13:31:00 +0100
 
