--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault (4.1.15-1) stable; urgency=low
+
+  * Fix bug in PHP class OMV\System\Storage\StorageDevice. Forgot to use
+    canonical device path when asking for the device name.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sat, 24 Nov 2018 21:00:50 +0100
+
 openmediavault (4.1.14-1) stable; urgency=low
 
   * Update locales.
