--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -5,6 +5,10 @@ openmediavault (5.0-1) unstable; urgency=low
   * The omv-salt CLI command superseds omv-mkconf. Note, the command
     will not only create the configuration files, it will also take care
     about to start/stop/restart the services.
+  * The omv-initsystem command has been replaced by omv-initdb. This command
+    discovers the current system settings and synchronizes them into the
+    database. Default systems settings will now be applied by the
+    omv.stage.setup Salt orchestration state.
   * Use systemd-logind to handle power button action.
   * Use systemd to reboot/shutdown/standby the system.
   * Issue #93: Use chrony instead of ntpd.
