--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -15,6 +15,10 @@ openmediavault (5.0-1) unstable; urgency=low
   * Use systemd to reboot/shutdown/standby the system.
   * Issue #93: Use chrony instead of ntpd.
   * Issue #146: Use systemd to configure the network.
+  * Add options 'Group' and 'Owner' to rsync settings. If the 'Archive' option
+    is enabled and one of its implied option 'Recursive',
+    'Preserve permissions', 'Times', 'Group' or 'Owner' is disabled, then this
+    option will be prefixed with '--no-xxx' in the rsync command line.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 08 May 2018 22:06:11 +0200
 
