--- a/deb/openmediavault-clamav/usr/share/openmediavault/locale/ko_KR/openmediavault-clamav.po
+++ b/deb/openmediavault-clamav/usr/share/openmediavault/locale/ko_KR/openmediavault-clamav.po
@@ -5,7 +5,7 @@
 # Translators:
 # Chang-Eon Byeon <ksna0827@gmail.com>, 2014
 # Ji-Hyeon Gim <potatogim@potatogim.net>, 2014-2015
-# Sungjin Kang <potopro@gmail.com>, 2014
+# Thomas Sungjin Kang <potopro@gmail.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
