--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -22,6 +22,12 @@ openmediavault (5.0-1) unstable; urgency=low
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 08 May 2018 22:06:11 +0200
 
+openmediavault (4.1.16-1) stable; urgency=low
+
+  * Fix some Python code issues.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 14 Dec 2018 09:26:08 +0100
+
 openmediavault (4.1.15-1) stable; urgency=low
 
   * Fix bug in PHP class OMV\System\Storage\StorageDevice. Forgot to use
