Fix bug in omv-mkaptidx.
(cherry picked from commit 51627cc2f2c5aa0714faf5038f29cac02e7e5bb0)
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (4.1.16-1) stable; urgency=low
 
   * Fix some Python code issues.
+  * Fix bug in omv-mkaptidx.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 14 Dec 2018 09:26:08 +0100
 
