--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,7 +1,9 @@
 openmediavault (4.1.16-1) stable; urgency=low
 
+  * Update locales.
   * Fix some Python code issues.
   * Fix bug in omv-mkaptidx.
+  * Do not show USB devices in the RAID creation dialog.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 14 Dec 2018 09:26:08 +0100
 
