--- a/deb/openmediavault/usr/share/openmediavault/locale/el_GR/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/el_GR/openmediavault.po
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-10-05 22:03+0200\n"
-"PO-Revision-Date: 2018-10-09 17:02+0000\n"
-"Last-Translator: Kostas Moho <kgounaris@hotmail.com>\n"
+"POT-Creation-Date: 2018-12-21 09:01+0100\n"
+"PO-Revision-Date: 2018-12-21 08:02+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Greek (Greece) (http://www.transifex.com/votdev/openmediavault/language/el_GR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2904,6 +2904,11 @@ msgstr "Επιλογή συσκευών για αφαίρεση από τη συ
 
 msgid "Select or enter a user name ..."
 msgstr "Επιλογή ή εισαγώγή ονόματος χρήστη ..."
+
+msgid ""
+"Select the devices that will be used to create the RAID device. Devices "
+"connected via USB will not be listed (too unreliable)."
+msgstr ""
 
 msgid "Self-test logs"
 msgstr "Καταγραφές αυτοελέγχων"
