--- a/deb/openmediavault/usr/share/openmediavault/locale/pl_PL/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/pl_PL/openmediavault.po
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-10-05 22:03+0200\n"
-"PO-Revision-Date: 2018-10-05 20:04+0000\n"
+"POT-Creation-Date: 2018-12-21 09:01+0100\n"
+"PO-Revision-Date: 2018-12-21 08:02+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Polish (Poland) (http://www.transifex.com/votdev/openmediavault/language/pl_PL/)\n"
 "MIME-Version: 1.0\n"
@@ -2909,6 +2909,11 @@ msgstr "Wybierz dyski, które mają być usunięte z macieży RAID"
 
 msgid "Select or enter a user name ..."
 msgstr "Wybierz lub wprowadź nazwę użytkownika..."
+
+msgid ""
+"Select the devices that will be used to create the RAID device. Devices "
+"connected via USB will not be listed (too unreliable)."
+msgstr ""
 
 msgid "Self-test logs"
 msgstr "Logi self-test"
