--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -3,7 +3,7 @@ openmediavault (4.1.16-1) stable; urgency=low
   * Update locales.
   * Fix some Python code issues.
   * Fix bug in omv-mkaptidx.
-  * Do not show USB devices in the RAID creation dialog.
+  * Display a warning dialog when creating a RAID of USB devices.
   * Support Thunderbolt network devices.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 14 Dec 2018 09:26:08 +0100
