--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -5,6 +5,7 @@ openmediavault (4.1.16-1) stable; urgency=low
   * Fix bug in omv-mkaptidx.
   * Do not show USB devices in the RAID creation dialog.
   * Support Thunderbolt network devices.
+  * Update Material Design icons to version 3.2.89.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 14 Dec 2018 09:26:08 +0100
 
