--- a/deb/openmediavault-clamav/debian/changelog
+++ b/deb/openmediavault-clamav/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault-clamav (4.1.9) stable; urgency=low
+
+  * Remove deprecated option StatsEnabled, StatsPEDisabled, StatsHostID
+    and StatsTimeout.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 23 Dec 2018 18:47:35 +0100
+
 openmediavault-clamav (4.1.8-1) stable; urgency=low
 
   * Update locales.
