Adapt to Debian 10 (Buster).
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault-clamav/debian/changelog
+++ b/deb/openmediavault-clamav/debian/changelog
@@ -1,7 +1,14 @@
+openmediavault-clamav (5.0-1) stable; urgency=low
+
+  * Adapt to Debian 10 (Buster).
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 23 Dec 2018 22:49:48 +0100
+
 openmediavault-clamav (4.1.9) stable; urgency=low
 
   * Remove deprecated option StatsEnabled, StatsPEDisabled, StatsHostID
     and StatsTimeout.
+  * Disable freshclam if database checks are set to 0.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sun, 23 Dec 2018 18:47:35 +0100
 
