--- a/deb/openmediavault-diskstats/usr/share/openmediavault/locale/ru_RU/openmediavault-diskstats.po
+++ b/deb/openmediavault-diskstats/usr/share/openmediavault/locale/ru_RU/openmediavault-diskstats.po
@@ -3,6 +3,9 @@
 # This file is distributed under the same license as the openmediavault-diskstats package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Артур Мудрых <arturmon82@gmail.com>, 2018
+# 
 #, fuzzy
 msgid ""
 msgstr ""
@@ -10,6 +13,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-12-31 13:59+0100\n"
 "PO-Revision-Date: 2017-12-31 13:16+0000\n"
+"Last-Translator: Артур Мудрых <arturmon82@gmail.com>, 2018\n"
 "Language-Team: Russian (Russia) (https://www.transifex.com/votdev/teams/14254/ru_RU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,13 +22,13 @@ msgstr ""
 "Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
 
 msgid "Disk I/O"
-msgstr ""
+msgstr "Диск ввод/вывод"
 
 msgid "Operations"
-msgstr ""
+msgstr "Операции"
 
 msgid "Time per operation"
-msgstr ""
+msgstr "Время на операцию"
 
 msgid "Traffic"
-msgstr ""
+msgstr "Трафик"
