--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -22,6 +22,12 @@ openmediavault (5.0-1) unstable; urgency=low
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 08 May 2018 22:06:11 +0200
 
+openmediavault (4.1.16-2) stable; urgency=low
+
+  * Fix bug in file system UI.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 24 Dec 2018 22:33:09 +0100
+
 openmediavault (4.1.16-1) stable; urgency=low
 
   * Update locales.
