--- a/deb/openmediavault-lvm2/debian/changelog
+++ b/deb/openmediavault-lvm2/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-lvm2 (5.0-1) stable; urgency=low
+
+  * Adapt to Debian 10 (Buster).
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 25 Dec 2018 19:04:00 +0100
+
 openmediavault-lvm2 (4.0.7-1) stable; urgency=low
 
   * Update locales.
