--- a/deb/openmediavault-forkeddaapd/debian/changelog
+++ b/deb/openmediavault-forkeddaapd/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-forkeddaapd (5.0-1) stable; urgency=low
+
+  * Adapt to Debian 10 (Buster).
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 25 Dec 2018 19:21:01 +0100
+
 openmediavault-forkeddaapd (4.0.7-1) stable; urgency=low
 
   * Issue #62: Monit config for forked-daapd causes monit to think forked-daapd
