--- a/deb/openmediavault-shairport/debian/changelog
+++ b/deb/openmediavault-shairport/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-shairport (5.0-1) stable; urgency=low
+
+  * Adapt to Debian 10 (Buster).
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 25 Dec 2018 22:40:41 +0100
+
 openmediavault-shairport (4.0.7-1) stable; urgency=low
 
   * Fix monit configuration.
