--- a/deb/openmediavault-shairport/debian/changelog
+++ b/deb/openmediavault-shairport/debian/changelog
@@ -1,6 +1,6 @@
 openmediavault-shairport (5.0-1) stable; urgency=low
 
-  * Adapt to Debian 10 (Buster).
+  * Adapt to openmediavault 5 (Usul).
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 25 Dec 2018 22:40:41 +0100
 
