Issue #270: Ensure smartctl command is not executed in parallel.
Signed-off-by: Volker Theile <votdev@gmx.de>
(cherry picked from commit 678496db56a2f68035a9d4cce002a0f97a7ff4be)

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (4.1.18-1) stable; urgency=low
+
+  * Issue #270: Ensure smartctl command is not executed in parallel.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sat, 19 Jan 2019 15:52:14 +0100
+
 openmediavault (4.1.17-1) stable; urgency=low
 
   * Update locales.
