Issue #317: Remove Zeroconf configuration
Fixes: https://github.com/openmediavault/openmediavault/issues/317

Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -18,6 +18,8 @@ openmediavault (5.0-1) unstable; urgency=low
   * Issue #266: Remember size and position of windows.
   * Issue #281: Display system uptime in RRD graph.
   * Issue #302: Display reboot notification.
+  * Issue #317: Remove the ability to configure Zeroconf services via UI.
+    They can still be customized via environment variables.
   * Add options 'Group' and 'Owner' to rsync settings. If the 'Archive' option
     is enabled and one of its implied option 'Recursive',
     'Preserve permissions', 'Times', 'Group' or 'Owner' is disabled, then this
